[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine-core = { path = "../engine-core" }
figment = { version = "0.10", features = ["yaml", "env"] }
serde_derive = "1.0.8"
serde = "1.0.8"
log = { version ="0.4.14", features = ["max_level_info", "release_max_level_info"] }
simple_logger = "2.1.0"
winit = "0.26.1"
iced = "0.3"
iced_native = "0.4"