[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
ash = "0.35.1+1.2.203"
figment = { version = "0.10", features = ["yaml", "env"] }
serde_derive = "1.0.8"
serde = "1.0.8"
log = "0.4.14"
simple_logger = "2.1.0"